# spotless

./: .gitignore  CHANGES.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: package.yaml  testing.yaml
doc/: Makefile  multimodel_run.txt  spotless.bib  spotless.tex  spotless_run.txt
spotless/: __init__.py  gridless_cli.py  model.py  multi_spotless.py  source.py  sphere.py  spotless.py  spotless_calibrate_cli.py  spotless_cli.py
spotless/tests/: test_model.py  test_source.py  test_sphere.py  test_spotless.py
test_data/: Makefile  test_data.json
test_data/test.ms/: table.f0  table.f1  table.f2  table.f3  table.f3_TSM0  table.f4  table.f5  table.f5_TSM0  table.f6  table.f6_TSM0  table.f7  table.f7_TSM0  table.f8  table.f9  table.f9_TSM0
test_data/test.ms/ANTENNA/: table.f0
test_data/test.ms/FEED/: table.f0  table.f0i
test_data/test.ms/FIELD/: table.f0  table.f0i
test_data/test.ms/OBSERVATION/: table.f0
test_data/test.ms/SOURCE/: table.f0
test_data/test.ms/SPECTRAL_WINDOW/: table.f0  table.f0i
