[project]
name = "spotless"
version = "0.6.0"
description = "Grid-Free Deconvolution Directly From Visibilities"
authors = [
    {name = "Tim Molteno",email = "tim@elec.ac.nz"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=1.2.1,<3.0.0)",
    "matplotlib (>=3.5.0,<4.0.0)",
    "healpy (>=1.15.0,<2.0.0)",
    "astropy (>=4.3)",
    "scipy (>=1.7.3)",
    "tart (>=1.4.0)",
    "disko (>=1.1.1)",
    "tart-tools (>=1.4.0)",
    "donfig (>=0.8.1.post1,<0.9.0)"
    ]

[project.scripts]
spotless = "spotless.spotless_cli:main"
gridless = "spotless.gridless_cli:main"
spotless_calibrate = "spotless.spotless_calibrate_cli:main"

[tool.poetry]


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
